fuel-client/src/client/schema/snapshots/fuel_client__client__schema__coin__tests__coin_by_id_query_gql_output.snap
---
source: fuel-client/src/client/schema/coin.rs
expression: operation.query

---
query Query($_0: HexString256!) {
  coin(id: $_0) {
    amount
    blockCreated
    color
    id
    maturity
    owner
    status
  }
}

