fuel-client/src/client/schema/snapshots/fuel_client__client__schema__coin__tests__coins_connection_query_gql_output.snap
---
source: fuel-client/src/client/schema/coin.rs
expression: operation.query

---
query Query($_0: HexString256!, $_1: String, $_2: String, $_3: Int, $_4: Int) {
  coinsByOwner(owner: $_0, after: $_1, before: $_2, first: $_3, last: $_4) {
    edges {
      cursor
      node {
        amount
        blockCreated
        color
        id
        maturity
        owner
        status
      }
    }
    pageInfo {
      endCursor
      hasNextPage
      hasPreviousPage
      startCursor
    }
  }
}

